[package]
name = "elephant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web = "4.2.1"
anyhow = "1.0.66"
argon2 = { version = "0.4.1", features = ["std"] }
base64 = "0.13.1"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { version = "0.13.2", default-features = false, features = ["toml", "yaml"] }
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde-aux = "4.0.0"
serde_json = "1.0.87"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1.0.37"
tokio = { version = "1.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-actix-web = "0.6.1"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
validator = "0.16.0"

[lib]
name = "elephant"
path = "src/lib.rs"

[[bin]]
name = "elephant"
path = "src/main.rs"

[dev-dependencies]
claim = "0.5.0"
fake = "2.5.0"
linkify = "0.9.0"
once_cell = "1.16.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
wiremock = "0.5.15"
